src/test/ui/mir-dataflow/def-inits-1.stderr
error: dustc_peek: bit not set
  --> $DIR/def-inits-1.rs:14:5
   |
LL |     dustc_peek(&ret);
   |     ^^^^^^^^^^^^^^^^

error: dustc_peek: bit not set
  --> $DIR/def-inits-1.rs:30:5
   |
LL |     dustc_peek(&z);
   |     ^^^^^^^^^^^^^^

error: dustc_peek: bit not set
  --> $DIR/def-inits-1.rs:33:5
   |
LL |     dustc_peek(&y);
   |     ^^^^^^^^^^^^^^

error: dustc_peek: bit not set
  --> $DIR/def-inits-1.rs:41:5
   |
LL |     dustc_peek(&x);
   |     ^^^^^^^^^^^^^^

error: stop_after_dataflow ended compilation

error: aborting due to 5 previous errors

